--- a/app/src/main/res/layout/ocarina_new.xml
+++ b/app/src/main/res/layout/ocarina_new.xml
@@ -78,6 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottomlayout"
+        android:visibility="gone"
         android:layout_marginHorizontal="20dp"
         app:layout_constraintTop_toBottomOf="@+id/middle_layout"
         app:layout_constraintStart_toStartOf="parent"
@@ -145,11 +146,12 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <HorizontalScrollView
-        android:visibility="gone"
         android:layout_marginTop="5dp"
         android:id="@+id/scrollView"
+        android:layout_marginHorizontal="20dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="20dp"
         app:layout_constraintTop_toBottomOf="@+id/middle_layout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -162,9 +164,9 @@
         >
 
         <RelativeLayout
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="20dp">
+            android:layout_height="wrap_content">
 
             <android.widget.Button
                 android:id="@+id/p1"
