--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,7 +35,7 @@
     <!--This will be used for TextViews like C3,D3,E3,F3,G3,A3,B3-->
     <style name="style_for_TextView_keyText3" >
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:capitalize">characters</item>
         <item name="android:typeface">sans</item>
         <item name="android:textSize">20sp</item>
@@ -48,7 +48,7 @@
     <!--This will be used for TextViews like C4,D4,E4,F4,G4,A4,B4-->
     <style name="style_for_TextView_keyText4" >
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:capitalize">characters</item>
         <item name="android:typeface">sans</item>
         <item name="android:textSize">20sp</item>
@@ -61,7 +61,7 @@
     <!--This will be used for TextViews like C5,D5,E5,F5,G5,A5,B5-->
     <style name="style_for_TextView_keyText5" >
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:capitalize">characters</item>
         <item name="android:typeface">sans</item>
         <item name="android:textSize">20sp</item>
@@ -74,7 +74,7 @@
     <!--This will be used for TextViews like C6,D6,E6,F6,G6,A6,B6-->
     <style name="style_for_TextView_keyText6" >
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:capitalize">characters</item>
         <item name="android:typeface">sans</item>
         <item name="android:textSize">20sp</item>
@@ -87,7 +87,7 @@
     <!--This will be used for TextViews like C7,D7,E7,F7,G7,A7,B7-->
     <style name="style_for_TextView_keyText7" >
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:capitalize">characters</item>
         <item name="android:typeface">sans</item>
         <item name="android:textSize">20sp</item>
