--- a/app/src/main/res/layout/mycollection_activity.xml
+++ b/app/src/main/res/layout/mycollection_activity.xml
@@ -112,7 +112,6 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/layout_popular"
@@ -124,14 +123,32 @@
             app:layout_constraintVertical_weight="0.8"
             android:paddingBottom="10dp">
 
+            <com.github.angads25.toggle.widget.LabeledSwitch
+                android:id="@+id/switch_btn"
+                android:layout_width="75dp"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                app:on="false"
+                app:textOn="좋아요순"
+                app:textOff="최신순"
+                app:colorOn="#38754C"
+                app:colorBorder="#38754C"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+
             <androidx.recyclerview.widget.RecyclerView
+                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 app:layout_constraintVertical_weight="0.8"
                 android:id="@+id/mycollectionlist"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/switch_btn"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent">
