좋아요, 최신순?

--- a/app/src/main/res/layout/mycollection_activity.xml
+++ b/app/src/main/res/layout/mycollection_activity.xml
@@ -129,8 +129,8 @@
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                 app:on="false"
-                app:textOn="좋아요순"
-                app:textOff="최신순"
+                app:textOn="좋아요"
+                app:textOff="최근 곡"
                 app:colorOn="#38754C"
                 app:colorBorder="#38754C"
                 android:layout_marginRight="10dp"
